ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/prev-next-topic.less
.prev-next-topic {
  .gu-pre-topic_container {
    margin-bottom: 0.75rem;
  }
  .gu-pre-next-topic_arrow-container {
    display: none;
  }
  .gu-pre-next-topic_text-container {
    display: flex;
  }
  .gu-pre-next-topic_text {
    font-size: var(--body-1-fs);
    line-height: var(--body-1-lh);
    font-weight: 400;
    color: var(--secondary-color);
    margin-bottom: 0;
  }
  .gu-pre-next-topic_text::after {
    content: ":";
    margin-left: 0.25rem;
    margin-right: 0.25rem;
  }
  .gu-pre-next-topic_link {
    font-size: var(--body-1-fs);
    line-height: var(--body-1-lh);
    font-weight: 600;
    color: var(--primary-color);
    text-decoration: none;
    margin-left: 0.25rem;
  }
}

